[metadata]
description-file = README.rst

[coverage:run]
branch = True
source = nanomesh

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html
norecursedirs=tests/helpers

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[mypy]
ignore_missing_imports = True
files = nanomesh, tests
