# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Nicolas Renaud
author_email = n.renaud@esciencecenter.nl'
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
description = Creates 3d meshes from microscopy experimental data
keywords =
    materials-science
    mesh-generation
    microscopy
long_description = file: README.md
long_description_content_type = text/markdown
name = nanomesh
project_urls =
    Bug Tracker = https://github.com/hpgem/nanomesh/issues
url = https://github.com/hpgem/nanomesh
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    IPython!=7.23  # 7.23 contains a bug that prevents matplotlib inline
    ipywidgets
    itkwidgets
    matplotlib
    meshio
    numpy
    pyvista
    scikit-image
    scikit-learn
    trimesh
    open3d  # 3d mesh simplification
    rtree  # soft dependency of trimesh


[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
develop =
    # linting
    isort
    pre-commit
    yapf
    # testing
    nbmake
    pytest
    pytest-cov
    pycodestyle
    # documentation
    recommonmark
    sphinx
    sphinx_rtd_theme
    autodocsumm
publishing =
    twine
    wheel
with_pygalmesh =
    pygalmesh @ git+http://git@github.com/hpgem/pygalmesh

[options.packages.find]
include = nanomesh, nanomesh.*

[coverage:run]
branch = True
source = nanomesh

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html
norecursedirs=tests/helpers

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[mypy]
ignore_missing_imports = True
files = nanomesh, tests
allow_redefinition = True
